--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
+.project
+.classpath
+.settings
+target
 *.class
-
-# Package Files #
 *.jar
 *.war
 *.ear
+.DS_Store
+.euml2
+.umlproject
+doc
+.DS_Storekk
+.metdata
+**/gen
+**/bin
+*~
+**/xcuserdata/**
