--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <name>Netcare Commons - MVK Integration</name>
   <description>Authentication Module for MVK</description>
   
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   
   <properties>
   	<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
   	<slf4j.version>1.6.4</slf4j.version>
   	<logback.version>1.0.0</logback.version>
-  	<cxf.version>2.5.2</cxf.version>
+  	<cxf.version>2.7.4</cxf.version>
   	<spring.version>3.1.2.RELEASE</spring.version>
 	<spring.security.version>3.1.3.RELEASE</spring.security.version>
   </properties>
