--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <name>Netcare Commons - MVK Integration</name>
   <description>Authentication Module for MVK</description>
   
-  <version>1.3.0</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <distributionManagement>
   	<repository>
@@ -15,6 +15,13 @@
   		<layout>default</layout>
   	</repository>
   </distributionManagement>
+  
+    <scm>
+        <url>https://github.com/callista-software/mvk-integration</url>
+        <connection>scm:git:ssh://git@github.com:callista-software/mvk-integration.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:callista-software/mvk-integration.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
   
   <properties>
   	<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
